Updated title, description, and portfolio section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Derya Deniz</title>
+    <title>Derya Deniz - Front-end Developer</title>
+    <meta
+      name="description"
+      content="Welcome to my portfolio! I'm Derya Deniz, a passionate front-end developer based in Europe/Netherlands. Explore my work and projects, including a yoga app, weather app, and more. Feel free to contact me for collaboration opportunities and to learn more about my skills and expertise."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
