Update about me page paragraphs and add CSS styling
- Updated the content of the about me page to provide a more detailed introduction
- Added CSS styles to enhance the visual presentation of the paragraphs
- Adjusted the margin of the h1 heading to fix its positioning under the navbar

These changes improve the readability and visual appeal of the about me page, making it more engaging and user-friendly.

--- a/about.html
+++ b/about.html
@@ -21,6 +21,28 @@
       name="description"
       content="Learn more about Derya Deniz, a front-end developer from Netherlands. Discover my skills, experience, and passion for web development. Contact me for collaboration or to discuss your project ideas."
     />
+    <style>
+      p {
+        font-size: 18px;
+        line-height: 1.5;
+        text-align: justify;
+        padding: 5px 20px;
+      }
+      h1,
+      h3 {
+        margin: 10;
+      }
+
+      h1 {
+        font-size: 96px;
+        margin-top: 45px;
+      }
+
+      h3 {
+        font-size: 24px;
+        opacity: 0.7;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -54,12 +76,41 @@
     </nav>
     <h1 class="text-center">About me</h1>
     <h3 class="text-center">Front-end developer from Europe/Netherlands</h3>
-    <div class="about-paragraphs text-center">
+    <div class="about-paragraphs">
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum.
+        Hey there, lovely people! Allow me to introduce myself—I'm Derya Deniz,
+        your friendly neighborhood coder and art enthusiast.
+      </p>
+
+      <p>
+        At the age of 28, I've embarked on an exciting journey to blend my love
+        for coding with my passion for creativity. 🎨🖥️ When I'm not immersed in
+        lines of code, you can find me surrounded by a delightful bunch of 15
+        cats. 🐱❤️
+      </p>
+
+      <p>
+        Art has always held a special place in my heart, and I've had the
+        incredible opportunity to showcase my work in both group and personal
+        exhibitions. In 2018, my art graced the walls of a captivating
+        exhibition in Turkey, and in 2020, I had the honor of sharing my
+        creativity in a personal exhibition in the land of the rising sun,
+        Japan! 🌟✨🎉
+      </p>
+
+      <p>
+        As destiny would have it, my husband and I recently embarked on a new
+        adventure in the Netherlands. Although I couldn't continue my teaching
+        journey here, I found solace in coding and decided to take up front-end
+        development. 🚀🌈 Joining SheCodes was a game-changer—I've already
+        earned two certifications and crafted some awesome projects!
+      </p>
+
+      <p>
+        While I dabbled in coding before, it's here that I'm truly embracing the
+        world of front-end wizardry. I'm thrilled to learn, grow, and connect
+        with the vibrant tech community! Let's create some magic together!
+        ✨🌟💻
       </p>
     </div>
     <div class="container">
