--- a/about.html
+++ b/about.html
@@ -116,13 +116,19 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/adoption.png" class="img-fluid p-2 shadow rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/weather-app.png"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/world-clock-app.png"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
       </div>
     </div>
