--- a/index.html
+++ b/index.html
@@ -66,52 +66,90 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="images/adoption.png" class="img-fluid rounded" />
         </div>
         <div class="col-6">
-          <h2 class="mb-3">Yoga app</h2>
+          <h2 class="mb-3">🌟 Cat Adoption Website 🐾</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            I'm thrilled to present my first project, a captivating Cat Adoption
+            Website! 🎉 This project was developed as part of the SheCodes
+            Basics workshop, where I honed my front-end coding skills. The Cat
+            Adoption Website showcases my ability to create a visually appealing
+            and interactive web page.
           </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+
+          <p>
+            🌐 Check out my Cat Adoption Website project and immerse yourself in
+            the world of adorable felines. Feel free to provide feedback or
+            suggestions—I'm always eager to learn and improve!
+          </p>
+          <div class="mt-5 link">
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-add-on-1ec59fdd-7b55-4a3b-a206-e3356c6e86c8/projects/1529719"
+              class="primary-link"
+              target="_blank"
+              >Launch Cat Adoption</a
+            >
           </div>
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <h2 class="mb-3">Weather app</h2>
+          <h2 class="mb-3">🌟 Weather App ☀️🌦️🌧️</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            Introducing my Weather Forecast App project, a fantastic application
+            that provides up-to-date weather information at your fingertips!
+            ☁️⛅🌡️ Developed during the SheCodes Plus workshop, this project
+            showcases my proficiency in front-end development and integrating
+            API data.
           </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+          <p>
+            🔍 Explore my Weather Forecast App project and discover the power of
+            staying informed about weather conditions. Your feedback and
+            suggestions are always welcome as I continue to enhance my skills
+            and create even more innovative projects!
+          </p>
+
+          <div class="mt-5 link">
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-plus-3e8ae1ad-07f8-42e2-a9ed-587c94f8591c/projects/1608442"
+              class="primary-link"
+              target="_blank"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img src="images/weather-app.png" class="img-fluid rounded" />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img src="images/world-clock-app.png" class="img-fluid rounded" />
         </div>
         <div class="col-6">
-          <h2 class="mb-3">Yogurt app</h2>
+          <h2 class="mb-3">🌟 World Clock App ⏰</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
+            I'm excited to share my most recent project, the World Clock App! 🎉
+            This application was developed as part of the SheCodes Plus Add-On
+            workshop, where I further honed my front-end development skills and
+            delved into the world of dynamic web applications. The World Clock
+            App showcases my ability to create an intuitive and functional time
+            zone converter.
           </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+          <p>
+            🌐 Explore my World Clock App project and discover a seamless way to
+            keep track of time around the globe. I welcome any feedback or
+            suggestions as I continue to refine my skills and embark on new
+            coding endeavors.
+          </p>
+          <div class="mt-5 link">
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-plus-add-on-b3c0f62f-5faf-420c-99fe-58dc2314cfce/projects/1620361"
+              class="primary-link"
+              target="_blank"
+              >Launch Weather App</a
+            >
           </div>
         </div>
       </div>
