--- a/index.html
+++ b/index.html
@@ -65,10 +65,14 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
-          <img src="images/adoption.png" class="img-fluid rounded" />
+        <div class="col-sm-6">
+          <img
+            src="images/adoption.png"
+            alt="Adoption App"
+            class="img-fluid rounded"
+          />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">🌟 Cat Adoption Website 🐾</h2>
           <p>
             I'm thrilled to present my first project, a captivating Cat Adoption
@@ -83,7 +87,7 @@
             the world of adorable felines. Feel free to provide feedback or
             suggestions—I'm always eager to learn and improve!
           </p>
-          <div class="mt-5 link">
+          <div class="mt-5 d-flex justify-content-center">
             <a
               href="https://www.shecodes.io/workshops/shecodes-basics-add-on-1ec59fdd-7b55-4a3b-a206-e3356c6e86c8/projects/1529719"
               class="primary-link"
@@ -94,7 +98,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">🌟 Weather App ☀️🌦️🌧️</h2>
           <p>
             Introducing my Weather Forecast App project, a fantastic application
@@ -110,7 +114,7 @@
             and create even more innovative projects!
           </p>
 
-          <div class="mt-5 link">
+          <div class="mt-5 d-flex justify-content-center">
             <a
               href="https://www.shecodes.io/workshops/shecodes-plus-3e8ae1ad-07f8-42e2-a9ed-587c94f8591c/projects/1608442"
               class="primary-link"
@@ -119,15 +123,23 @@
             >
           </div>
         </div>
-        <div class="col-6">
-          <img src="images/weather-app.png" class="img-fluid rounded" />
+        <div class="col-sm-6">
+          <img
+            src="images/weather-app.png"
+            alt="Weather App"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
-          <img src="images/world-clock-app.png" class="img-fluid rounded" />
+        <div class="col-sm-6">
+          <img
+            src="images/world-clock-app.png"
+            alt="World Clock App"
+            class="img-fluid rounded"
+          />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">🌟 World Clock App ⏰</h2>
           <p>
             I'm excited to share my most recent project, the World Clock App! 🎉
@@ -143,7 +155,7 @@
             suggestions as I continue to refine my skills and embark on new
             coding endeavors.
           </p>
-          <div class="mt-5 link">
+          <div class="mt-5 d-flex justify-content-center">
             <a
               href="https://www.shecodes.io/workshops/shecodes-plus-add-on-b3c0f62f-5faf-420c-99fe-58dc2314cfce/projects/1620361"
               class="primary-link"
