--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           />
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-5 mb-5">
         <div class="col-sm-6">
           <img
             src="images/world-clock-app.png"
