--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Welcome to my portfolio! I'm Derya Deniz, a passionate front-end developer based in Europe/Netherlands. Explore my work and projects, including a yoga app, weather app, and more. Feel free to contact me for collaboration opportunities and to learn more about my skills and expertise."
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&family=Poppins:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -43,6 +49,9 @@
               <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
               >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="timeline.html">Timeline</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About me</a>
