Hide images on small screens

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/style.css" />
+    <style>
+      @media screen and (max-width: 600px) {
+        img {
+          display: none;
+        }
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -63,16 +70,16 @@
         </div>
       </div>
     </nav>
-    <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">Derya Deniz</h1>
-    <h3 class="text-center">
-      Front-end developer, based in Europe/Netherlands
-    </h3>
-    <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
-    </div>
     <div class="container">
+      <h2 class="text-center">👋 Hi I am</h2>
+      <h1 class="text-center">Derya Deniz</h1>
+      <h3 class="text-center">
+        Front-end developer, based in Europe/Netherlands
+      </h3>
+      <div class="navigation-links mb-5">
+        <a href="about.html#contact" class="primary-link">Contact me</a>
+        <a href="about.html" class="secondary-link">About me</a>
+      </div>
       <div class="row">
         <div class="col-sm-6">
           <img
