Update color scheme and root colors
- Updated color codes for improved visual consistency
- Added root colors for easier maintenance and flexibility

--- a/about.html
+++ b/about.html
@@ -54,10 +54,16 @@
         max-height: 400px;
         object-fit: cover;
       }
+      .about-paragraphs {
+        width: 53%;
+        margin: 0 auto;
+        margin-top: 30px;
+        margin-bottom: 30px;
+      }
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">Derya Deniz</a>
         <button
