--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">Derya Deniz</a>
         <button
