--- a/timeline.html
+++ b/timeline.html
@@ -9,17 +9,17 @@
       name="description"
       content="Explore my captivating timeline as a front-end developer from the Netherlands. Witness my growth, achievements, and notable projects that define my successful journey in web development."
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&family=Poppins:ital@0;1&display=swap"
       rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
     />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
@@ -28,10 +28,13 @@
     ></script>
     <link rel="stylesheet" href="src/style.css" />
     <style>
+      h1 {
+        margin-bottom: 25px;
+      }
       h2 {
         font-size: 18px;
         font-family: "IM Fell DW Pica SC", serif;
-        color: var(--fifth-color);
+        color: var(--forth-color);
       }
       .left h2 {
         text-align: left;
@@ -50,7 +53,7 @@
         content: "";
         position: absolute;
         width: 6px;
-        background-color: var(--primary-color);
+        background-color: var(--fifth-color);
         top: 0;
         bottom: 0;
         left: 50%;
@@ -70,8 +73,8 @@
         width: 25px;
         height: 25px;
         right: -12px;
-        background-color: var(--forth-color);
-        border: 4px solid var(--primary-color);
+        background-color: var(--third-color);
+        border: 4px solid var(--fifth-color);
         top: 50%;
         border-radius: 50%;
         z-index: 1;
@@ -92,7 +95,7 @@
         right: 30px;
         border: medium solid;
         border-width: 10px 0 10px 10px;
-        border-color: transparent transparent transparent var(--secondary-color);
+        border-color: transparent transparent transparent var(--primary-color);
       }
       .right::before {
         content: " ";
@@ -102,9 +105,9 @@
         width: 0;
         z-index: 1;
         left: 30px;
-        border: medium solid var(--secondary-color);
+        border: medium solid var(--primary-color);
         border-width: 10px 10px 10px 0;
-        border-color: transparent var(--secondary-color) transparent transparent;
+        border-color: transparent var(--primary-color) transparent transparent;
       }
       .right::after {
         left: -12px;
@@ -112,10 +115,10 @@
 
       .timeline-content {
         padding: 20px 30px;
-        background-color: var(--secondary-color);
+        background-color: var(--primary-color);
         position: relative;
         border-radius: 35px;
-        color: var(--forth-color);
+        color: var(--third-color);
       }
 
       @media screen and (max-width: 600px) {
@@ -131,10 +134,9 @@
 
         .content::before {
           left: 60px;
-          border: medium solid var(--secondary-color);
+          border: medium solid var(--primary-color);
           border-width: 10px 10px 10px 0;
-          border-color: transparent var(--secondary-color) transparent
-            transparent;
+          border-color: transparent var(--primary-color) transparent transparent;
         }
 
         .left::after,
@@ -149,7 +151,7 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">Derya Deniz</a>
         <button
