--- a/timeline.html
+++ b/timeline.html
@@ -34,7 +34,7 @@
       h2 {
         font-size: 18px;
         font-family: "IM Fell DW Pica SC", serif;
-        color: var(--forth-color);
+        color: var(--secondary-color);
       }
       .left h2 {
         text-align: left;
@@ -53,7 +53,7 @@
         content: "";
         position: absolute;
         width: 6px;
-        background-color: var(--fifth-color);
+        background-color: var(--primary-color);
         top: 0;
         bottom: 0;
         left: 50%;
@@ -74,7 +74,7 @@
         height: 25px;
         right: -12px;
         background-color: var(--third-color);
-        border: 4px solid var(--fifth-color);
+        border: 4px solid var(--primary-color);
         top: 50%;
         border-radius: 50%;
         z-index: 1;
@@ -95,7 +95,7 @@
         right: 30px;
         border: medium solid;
         border-width: 10px 0 10px 10px;
-        border-color: transparent transparent transparent var(--primary-color);
+        border-color: transparent transparent transparent var(--fifth-color);
       }
       .right::before {
         content: " ";
@@ -105,9 +105,9 @@
         width: 0;
         z-index: 1;
         left: 30px;
-        border: medium solid var(--primary-color);
+        border: medium solid var(--fifth-color);
         border-width: 10px 10px 10px 0;
-        border-color: transparent var(--primary-color) transparent transparent;
+        border-color: transparent var(--fifth-color) transparent transparent;
       }
       .right::after {
         left: -12px;
@@ -115,7 +115,7 @@
 
       .timeline-content {
         padding: 20px 30px;
-        background-color: var(--primary-color);
+        background-color: var(--fifth-color);
         position: relative;
         border-radius: 35px;
         color: var(--third-color);
@@ -134,9 +134,9 @@
 
         .content::before {
           left: 60px;
-          border: medium solid var(--primary-color);
+          border: medium solid var(--fifth-color);
           border-width: 10px 10px 10px 0;
-          border-color: transparent var(--primary-color) transparent transparent;
+          border-color: transparent var(--fifth-color) transparent transparent;
         }
 
         .left::after,
