--- a/about.html
+++ b/about.html
@@ -22,16 +22,15 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>About Derya Deniz</title>
+    <title>Derya Deniz - About Me</title>
     <meta
       name="description"
       content="Learn more about Derya Deniz, a front-end developer from Netherlands. Discover my skills, experience, and passion for web development. Contact me for collaboration or to discuss your project ideas."
     />
     <style>
       p {
-        font-size: 18px;
         line-height: 1.5;
-        text-align: justify;
+
         padding: 5px 20px;
       }
       h1,
@@ -81,6 +80,9 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="work.html">Projecs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="timeline.html">Timeline</a>
