--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="work.html">Projecs</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="timeline.html">Timeline</a>
             </li>
             <li class="nav-item">
