--- a/timeline.html
+++ b/timeline.html
@@ -173,6 +173,9 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="work.html">Projecs</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="timeline.html">Timeline</a>
             </li>
             <li class="nav-item">
