--- a/index.html
+++ b/index.html
@@ -28,9 +28,33 @@
     ></script>
     <link rel="stylesheet" href="src/style.css" />
     <style>
+      h2 {
+        padding: 1px;
+        background: #fcf8f2;
+        border: 1px solid #fcf8f2;
+        width: fit-content;
+        margin: 0 auto;
+        margin-bottom: -33px;
+        position: relative;
+      }
+      .frame {
+        width: 60%;
+        text-align: center;
+        margin: 0 auto;
+        padding: 45px 50px 70px 50px;
+        border: solid var(--fifth-color);
+      }
+      .about-me-links {
+        margin-top: -95px;
+      }
       @media screen and (max-width: 600px) {
         img {
           display: none;
+        }
+        .frame {
+          border: none;
+          padding: none;
+          width: fit-content;
         }
       }
     </style>
@@ -75,13 +99,17 @@
     </nav>
     <div class="container">
       <h2 class="text-center">👋 Hi I am</h2>
-      <h1 class="text-center">Derya Deniz</h1>
-      <h3 class="text-center">
-        Front-end developer, based in Europe/Netherlands
-      </h3>
-      <div class="navigation-links mb-5">
-        <a href="about.html#contact" class="primary-link">Contact me</a>
-        <a href="about.html" class="secondary-link">About me</a>
+      <div class="frame">
+        <h1 class="text-center">Derya Deniz</h1>
+        <h3 class="text-center">
+          Front-end developer, based in Europe/Netherlands
+        </h3>
+      </div>
+      <div class="about-me-links">
+        <div class="navigation-links mb-5">
+          <a href="about.html#contact" class="primary-link">Contact me</a>
+          <a href="about.html" class="secondary-link">About me</a>
+        </div>
       </div>
       <div class="row">
         <div class="col-sm-6">
