Rewrite the Contact me part

--- a/about.html
+++ b/about.html
@@ -210,10 +210,10 @@
       </div>
     </div>
     <div id="contact" class="mt-5">
-      <h2 class="text-center">📮 Contact me</h2>
+      <h2 class="text-center">📮 Get in Touch</h2>
       <p class="text-center">
-        I'd love to hear from you! Feel free to reach out to me with any
-        inquiries or collaboration opportunities.
+        I'd love to hear from you! Whether you have questions, collaboration
+        opportunities, or just want to say hello, feel free to reach out.
       </p>
       <p class="text-center">You can contact me via email:</p>
       <p class="text-center">
