Linked my social media accounts

--- a/about.html
+++ b/about.html
@@ -60,6 +60,9 @@
         height: auto;
         max-height: 400px;
         object-fit: cover;
+        margin: 0 auto;
+        margin-left: 20%;
+        margin-top: 28%;
       }
 
       .about-paragraphs {
@@ -68,7 +71,7 @@
         margin-top: 30px;
         margin-bottom: 30px;
       }
-      @media screen and (max-width: 600px) {
+      @media screen and (max-width: 800px) {
         .profile-pic {
           display: none;
         }
@@ -120,14 +123,14 @@
     <h3 class="text-center">Front-end developer from Europe/Netherlands</h3>
     <div class="about-paragraphs">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-md-4">
           <img
             src="images/derya.jpeg"
             class="img-fluid p-2 profile-pic"
             alt=""
           />
         </div>
-        <div class="col-sm-8">
+        <div class="col-md-8">
           <h2>Hey there, lovely people!</h2>
           <p>
             Allow me to introduce myself—I'm Derya Deniz, your friendly
@@ -226,5 +229,16 @@
         >
       </p>
     </div>
+    <footer>
+      <a href="https://www.instagram.com/hollanda.kedisi/"
+        ><i class="fa-brands fa-instagram" style="color: #d97059"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/deryadeniz/"
+        ><i class="fa-brands fa-linkedin" style="color: #d97059"></i
+      ></a>
+      <a href="https://github.com/deryadenizz"
+        ><i class="fa-brands fa-github" style="color: #d97059"></i
+      ></a>
+    </footer>
   </body>
 </html>
