--- a/timeline.html
+++ b/timeline.html
@@ -285,5 +285,16 @@
         </div>
       </div>
     </div>
+    <footer>
+      <a href="https://www.instagram.com/hollanda.kedisi/"
+        ><i class="fa-brands fa-instagram" style="color: #d97059"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/deryadeniz/"
+        ><i class="fa-brands fa-linkedin" style="color: #d97059"></i
+      ></a>
+      <a href="https://github.com/deryadenizz"
+        ><i class="fa-brands fa-github" style="color: #d97059"></i
+      ></a>
+    </footer>
   </body>
 </html>
