Refined page layout, applied CSS fixes, and made content adjustments
- Updated page layout to improve readability and visual appeal
- Fixed CSS issues to ensure proper rendering across different devices and browsers
- Made necessary content adjustments for better clarity and user experience
- Reviewed and optimized code for improved performance

--- a/about.html
+++ b/about.html
@@ -60,9 +60,11 @@
         height: auto;
         max-height: 400px;
         object-fit: cover;
+      }
+      .profile-pic {
         margin: 0 auto;
-        margin-left: 20%;
-        margin-top: 28%;
+        margin-left: 17%;
+        margin-top: 22%;
       }
 
       .about-paragraphs {
@@ -71,7 +73,7 @@
         margin-top: 30px;
         margin-bottom: 30px;
       }
-      @media screen and (max-width: 800px) {
+      @media screen and (max-width: 1000px) {
         .profile-pic {
           display: none;
         }
@@ -191,31 +193,7 @@
         can create magic in the digital realm. 💫✨💻
       </p>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <img
-            src="images/adoption.png"
-            alt="Adoption App"
-            class="img-fluid p-2 shadow rounded"
-          />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="images/weather-app.png"
-            alt="Weather App"
-            class="img-fluid p-2 shadow rounded"
-          />
-        </div>
-        <div class="col-sm-4">
-          <img
-            src="images/world-clock-app.png"
-            alt="World Clock App"
-            class="img-fluid p-2 shadow rounded"
-          />
-        </div>
-      </div>
-    </div>
+
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Get in Touch</h2>
       <p class="text-center">
@@ -230,13 +208,13 @@
       </p>
     </div>
     <footer>
-      <a href="https://www.instagram.com/hollanda.kedisi/"
+      <a href="https://www.instagram.com/hollanda.kedisi/" target="blank"
         ><i class="fa-brands fa-instagram" style="color: #d97059"></i
       ></a>
-      <a href="https://www.linkedin.com/in/deryadeniz/"
+      <a href="https://www.linkedin.com/in/deryadeniz/" target="blank"
         ><i class="fa-brands fa-linkedin" style="color: #d97059"></i
       ></a>
-      <a href="https://github.com/deryadenizz"
+      <a href="https://github.com/deryadenizz" target="blank"
         ><i class="fa-brands fa-github" style="color: #d97059"></i
       ></a>
     </footer>
