--- a/timeline.html
+++ b/timeline.html
@@ -286,13 +286,13 @@
       </div>
     </div>
     <footer>
-      <a href="https://www.instagram.com/hollanda.kedisi/"
+      <a href="https://www.instagram.com/hollanda.kedisi/" target="blank"
         ><i class="fa-brands fa-instagram" style="color: #d97059"></i
       ></a>
-      <a href="https://www.linkedin.com/in/deryadeniz/"
+      <a href="https://www.linkedin.com/in/deryadeniz/" target="blank"
         ><i class="fa-brands fa-linkedin" style="color: #d97059"></i
       ></a>
-      <a href="https://github.com/deryadenizz"
+      <a href="https://github.com/deryadenizz" target="blank"
         ><i class="fa-brands fa-github" style="color: #d97059"></i
       ></a>
     </footer>
