--- a/work.html
+++ b/work.html
@@ -240,29 +240,17 @@
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-            </div>
-          </div>
-        </div>
+        <div class="col"></div>
       </div>
     </div>
     <footer>
-      <a href="https://www.instagram.com/hollanda.kedisi/"
+      <a href="https://www.instagram.com/hollanda.kedisi/" target="blank"
         ><i class="fa-brands fa-instagram" style="color: #d97059"></i
       ></a>
-      <a href="https://www.linkedin.com/in/deryadeniz/"
+      <a href="https://www.linkedin.com/in/deryadeniz/" target="blank"
         ><i class="fa-brands fa-linkedin" style="color: #d97059"></i
       ></a>
-      <a href="https://github.com/deryadenizz"
+      <a href="https://github.com/deryadenizz" target="blank"
         ><i class="fa-brands fa-github" style="color: #d97059"></i
       ></a>
     </footer>
