--- a/about.html
+++ b/about.html
@@ -48,6 +48,9 @@
         font-size: 96px;
         margin-top: 45px;
       }
+      h2 {
+        margin: 25px;
+      }
 
       h3 {
         font-size: 24px;
